// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return valid response 1`] = `
Object {
  "body": Object {
    "data": Object {
      "__schema": Object {
        "queryType": Object {
          "name": "RootQuery",
        },
      },
    },
    "extensions": Object {},
  },
  "headers": Object {
    "access-control-allow-origin": "*",
    "connection": "close",
    "content-length": "72",
    "content-type": "application/json; charset=utf-8",
    "vary": "Accept-Encoding",
    "x-powered-by": "Express",
  },
  "statusCode": 200,
}
`;

exports[`should throw error when parsing body without query field 1`] = `
Object {
  "body": Object {
    "errors": Array [
      Object {
        "message": "Must provide query string.",
      },
    ],
  },
  "headers": Object {
    "access-control-allow-origin": "*",
    "connection": "close",
    "content-length": "53",
    "content-type": "application/json; charset=utf-8",
    "vary": "Accept-Encoding",
    "x-powered-by": "Express",
  },
  "statusCode": 400,
}
`;

exports[`should throw error when parsing invalid JSON 1`] = `
Object {
  "body": Object {
    "errors": Array [
      Object {
        "locations": Array [
          Object {
            "column": 14,
            "line": 1,
          },
        ],
        "message": "Syntax Error: Expected Name, found <EOF>",
      },
    ],
    "extensions": Object {},
  },
  "headers": Object {
    "access-control-allow-origin": "*",
    "connection": "close",
    "content-length": "120",
    "content-type": "application/json; charset=utf-8",
    "vary": "Accept-Encoding",
    "x-powered-by": "Express",
  },
  "statusCode": 400,
}
`;
